@@ -1,5 +1,10 @@
 2006-09-16  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* scm/define-grobs.scm (all-grob-descriptions): oops, typo:
+	use spanner::set-spacing-ronds
+
+	* lily/note-column.cc: reformat.
+
 	* lily/rest-collision.cc (calc_positioning_done): fix whole/half
 	step positioning for note/rest combinations.
 
